--- a/pgr.ui
+++ b/pgr.ui
@@ -22,7 +22,11 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QLineEdit" name="out_le"/>
+     <widget class="QLineEdit" name="out_le">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
     <item row="3" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -90,12 +94,16 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Search word (disease):</string>
+       <string>Keyword (disease):</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="word_le"/>
+     <widget class="QLineEdit" name="word_le">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_3">
@@ -143,6 +151,12 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>word_le</tabstop>
+  <tabstop>out_le</tabstop>
+  <tabstop>start_pb</tabstop>
+  <tabstop>stop_pb</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
